# Annotathon

./: .gitattributes  .gitignore  DISCLAIMER-AKNOWLEDGEMENT.md  LICENSE  README.md  pyproject.toml
R/: .Rprofile  CAVEATS.md  config.toml
R/src/: 3-recherche-homologues_MAGANALOPEZ.Rmd  alignement-multiple.Rmd  alignement-multiple2.Rmd  linsearch1.R  mAlignToolkit.R  searchblossum30.R  searchblossum45.R  searchblossum60.R
R/src/_gridsearch/: searchblossum30.R  searchblossum45.R  searchblossum60.R
annotathon/annotation/: helper_functions.py
annotathon/parsing/: blast.py
annotathon/utils/: customobjs.py
assets/: aminoacids.csv  translation_tables.json
config/: locations.toml
misc/: caveats.md  checksums.md  sources.md
workflow/: Annotathon-dev.ipynb  BLAST-results.ipynb  Entrez-Copy1.ipynb  Entrez.ipynb  caveats.md
